Document Java native access warning